RHPAM-3709: upgrade maven dependencies to address CVE-2021-26291

--- a/kie-wb-common-ala/kie-wb-common-ala-build-maven/pom.xml
+++ b/kie-wb-common-ala/kie-wb-common-ala-build-maven/pom.xml
@@ -99,16 +99,16 @@
 
     <!-- dependencies to enable maven downloads -->
     <dependency>
-      <groupId>org.eclipse.aether</groupId>
-      <artifactId>aether-api</artifactId>
+      <groupId>org.apache.maven.resolver</groupId>
+      <artifactId>maven-resolver-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.aether</groupId>
-      <artifactId>aether-connector-basic</artifactId>
+      <groupId>org.apache.maven.resolver</groupId>
+      <artifactId>maven-resolver-connector-basic</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.aether</groupId>
-      <artifactId>aether-transport-wagon</artifactId>
+      <groupId>org.apache.maven.resolver</groupId>
+      <artifactId>maven-resolver-transport-wagon</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.wagon</groupId>
